# DarkIronV1

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml
assets/: pyramid.json  village.json
crates/darkiron-ai-gateway/: Cargo.toml
crates/darkiron-cook/: Cargo.toml
crates/darkiron-presence/: Cargo.toml
crates/darkiron-runtime/: Cargo.toml
crates/darkiron-runtime/src/: asset_watcher.rs  main.rs  scene_manager.rs
crates/darkiron-transport/: Cargo.toml
crates/darkiron-usd/: Cargo.toml
docs/: REQUIREMENTS.md  gemini-code-review.md  gemini-phase1-review.md  gemini-phase2-review.md  gemini-render-review-v2.md  gemini-render-review.md
docs/architecture/: 001-nats-over-grpc.md
docs/onboarding/: setup-windows.md
docs/prompts/: requirement-analyst.md
infra/docker/: Dockerfile.editor  Dockerfile.runtime  nginx.conf
schemas/: nats-subjects.toml
scripts/: dev-start.bat  kill.bat
shaders/: golden_triangle.wgsl  line.wgsl  mesh.wgsl
tools/: apply-flatbuffers.py  cook-usd.py  export-chess-json.py  fix-editor-pkg.py  fix-editor.py  fix-names.py  fix-pawn-names.py  fix-pkg.py  fix-renderer.js  fix-renderer.py  fix-runtime.py  flatten-usd.py  gemini-phase1-plan.py  gemini-phase2-plan.py  gemini-render-review.py  gemini-review-v2.py  gemini-review.py  load-chess-usd.py  publish-cube.js  publish-multi.js  refactor-renderer.py  test-fb-build.py  write-renderer-v2.js  write-renderer-v3.js  write-renderer-v4.js  write-renderer.js  write-runtime-v2.js  write-runtime.js  write-scene.js
(+22 files in other folders)
