[workspace]
resolver = "2"
members = [
    "crates/darkiron-runtime",
    "crates/darkiron-transport",
    "crates/darkiron-usd",
    "crates/darkiron-cook",
    "crates/darkiron-presence",
    "crates/darkiron-ai-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
repository = "https://github.com/ioi/darkiron"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# NATS client
async-nats = "0.38"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flatbuffers = "24.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File watching (for hot reload)
notify = "7"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

[profile.dev]
opt-level = 1  # Slightly optimize in debug for USD FFI performance

[profile.release]
lto = "thin"
codegen-units = 1
